[#1169] Fix misalignment of quick entry metadata section
Assign a height (based on other form elements height), and make sure
vertical align is set consistently so that these elements line up
perfectly with one another.

--- a/htdocs/scss/pages/entry/new.scss
+++ b/htdocs/scss/pages/entry/new.scss
@@ -1,4 +1,4 @@
-@import "foundation/base", "foundation/components/grid", "foundation/components/type";
+@import "foundation/base", "foundation/components/grid", "foundation/components/type", "foundation/components/forms";
 
 .entry-quick-actions .secondary-actions {
     text-align: left;
@@ -92,14 +92,25 @@
         // force alignment to buttons
         padding-top: $button-med - rem-calc(1);
         position: relative;
-        top: 1px;
+        top: -2px;
+        border-radius: 0;
     }
     .usejournal-text {
         padding-left: 0.2rem;
     }
 
-    .secondary-actions li + li input {
+    li + li input {
         border-left: none;
+    }
+
+    select {
+        position: relative;
+        top: -2px;
+    }
+
+    input, .fancy-select-output, select {
+        height: ($input-font-size + ($form-spacing * 1.5) - rem-calc(1));
+        vertical-align: middle;
     }
 
     @media #{$small-only} {
